--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@import "~inter-ui/inter.css";
+html {
+  font-family: "Inter", sans-serif;
+}
+body {
+  margin: 0px;
+}
 /*WIDGETS*/
 .centered,
 .widget-container {
@@ -10,7 +17,7 @@
   align-items: center;
   justify-content: center;
   z-index: 1;
-  margin-top: 10px;
+  margin: 0px;
 }
 .widget-container.Link {
   padding: 0px !important;
